# pi-project

./: .gitignore  .gitmodules
apps/: CMakeLists.txt  main.cpp
apps/Api/PubApi/: cameraPub.cpp  ledPub.cpp  systemStatusPub.cpp
apps/Api/SubApi/: cameraLed.cpp  cameraSub.cpp  led.cpp  subApi.cpp
apps/CameraApp/: CameraApp.cpp
apps/Configs/: camera.json  config.json
apps/LedApp/: LedApp.cpp
apps/SystemStatusApp/: SystemStatusApp.cpp
broker/: mosqui.conf
broker/ca_certificates/: ca.crt
broker/certs/: server.crt  server.csr  server.key
gateway/client/: .env.example  env.d.ts  package.json  vite.config.ts
gateway/client/src/: App.vue  main.ts
gateway/client/src/assets/: main.css
gateway/client/src/components/: Led.vue  NewCard.vue  NewDialog.vue
gateway/client/src/plugins/: vuetify.ts
gateway/client/src/router/: index.ts
gateway/client/src/styles/: HistoryView.scss  _base.scss  _tab.scss  app.scss
gateway/server/: .env.example  .sequelizerc  README.md  eslintrc.js  package.json  tsconfig.json
gateway/server/controllers/: controlLed.controller.ts  message.controller.ts  messageController.ts  sensor.controller.ts  sensorController.ts  sensorType.controller .ts  systemStatus.controller.ts
gateway/server/database/: database.sqlite  db.ts
gateway/server/models/: cameraImage.model.ts  message.model.ts  message.ts  sensor.model.ts  sensor.ts  sensorType.model.ts  systemStatus.model.ts
gateway/server/routes/: message.ts  sensor.ts
gateway/server/src/: app.ts  imageWorker.ts  mqttWorker.ts
gateway/server/utils/: userMqtt.ts
(+29 files in other folders)
